--- a/style.css
+++ b/style.css
@@ -160,6 +160,9 @@ body{
 .card{
     padding: 2.5rem 2rem;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 .card__icon{
     background-color: #2D9CDB;
@@ -185,6 +188,7 @@ body{
     border: 0;
     cursor: pointer;
     padding: 0.5rem .8rem;
+    margin-top: auto;
     transition: all .3s ease-in-out;
 }
 .card:hover{
