--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ body{
 .card__title{
     font-weight: 700;
     font-size: 18px;
+    margin-bottom: 0;
 }
 .card__btn{
     border-radius: 10px;
